# O

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  Readme.md  main.py  pyproject.toml  requirements.txt  run_upgrade_matrix.sh  upgrade_matrix_usage.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
Hacks/: run_upgrade_matrix.sh
cli/: args.py  commands.py
rhoshift/: main.py
rhoshift/cli/: args.py  commands.py
rhoshift/logger/: logger.py
rhoshift/utils/: constants.py  health_monitor.py  resilience.py  stability_coordinator.py  utils.py
rhoshift/utils/operator/: cleanup.py  enhanced_operator.py  operator.py
scripts/: run_upgrade_matrix.sh
scripts/cleanup/: cleanup_all.sh
tests/: conftest.py  pytest.ini  test_bulletproof.py  test_cli_args.py  test_constants.py  test_core_functionality.py  test_core_functionality.py.backup  test_enhanced_operator.py  test_fixed_unit.py  test_health_monitor.py  test_logger.py  test_main.py  test_mocked_functionality.py  test_operator.py  test_operator_installation.py  test_stability_coordinator.py  test_unit_focused.py
utils/: constants.py  utils.py
utils/operator/: cleanup.py  cleanup_all.sh  operator.py
utils/upgrade/: __init__.py  matrix.py
