[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RhoShift"
version = "0.1.0"
description = "Red Hat OpenShift AI Upgrade Matrix Testing Tool"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "openshift-client",
    "boto3", 
    "python-dotenv",
    "requests",
    "kubernetes",
]

[project.scripts]
run-upgrade-matrix = "rhoai_upgrade_matrix.cli:run_upgrade_matrix"
rhoai-toolkit = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--verbose"

[tool.ruff]
line-length = 100
target-version = "py38" 